src/objects/KnowledgeBaseWguCourseVersionLink__c.object
<CustomObject>
    <description>Junction object between a Knowledge Article Reporting (Knowledge Article) and Course Versions</description>
    <fields>
        <fullName>KnowledgeArticleVersionId__c</fullName>
        <externalId>true</externalId>
        <label>KnowledgeArticleVersionId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeBaseReporting__c</fullName>
        <label>Knowledge Base Reporting</label>
        <referenceTo>KnowledgeBaseReporting__c</referenceTo>
        <relationshipLabel>WGU Course Version</relationshipLabel>
        <relationshipName>Knowledge_Article_Course_Version_Link</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MajorVersion__c</fullName>
        <formula>WGUCourseVersion__r.MajorVersion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Prevent duplicate junction relationships</description>
        <label>UniqueId</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>Knowledge Base Reporting</relationshipLabel>
        <relationshipName>Knowledge_Article_Course_Version_Link</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Knowledge Base WGU Course Version Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Knowledge Base WGU Course Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Base WGU Course Version Link</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>